# SoundMirror

./: .gitignore  ErrorsConfig.cpp  ErrorsConfig.h  Merger.cpp  Merger.h  README.md  app.cpp  app.h  capturer.cpp  capturer.h  client.cpp  errors.cpp  errors.h  main.cpp  main.h  medium.cpp  presenter.cpp  presenter.h  server.cpp  server.h  server_errors.h  wave_file_controller.cpp  wave_file_controller.h
client/: settings.gradle.kts
client/app/: build.gradle.kts
client/app/src/androidTest/java/com/bacorp/soundmirror/: ExampleInstrumentedTest.kt
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/bacorp/soundmirror/: MainActivity.kt
client/app/src/main/java/com/bacorp/soundmirror/data/: NetworkHelper.kt  SettingsRepository.kt
client/app/src/main/res/values/: strings.xml  themes.xml
client/app/src/test/java/com/bacorp/soundmirror/: ExampleUnitTest.kt
client/gradle/: libs.versions.toml
client/gradle/wrapper/: gradle-wrapper.properties
data/: Capture.cpp  Capture.h
mathutils/: converters.cpp  converters.h
server/: .gitignore  CMakeLists.txt  server.cpp  server.h  server_errors.h
server/cmd/: app.cpp
server/src/: AudioBufferPool.cpp  AudioBufferPool.hpp  ErrorCodes.hpp  ErrorsConfig.cpp
server/src/constants/: QueueSizes.hpp
server/src/consumer/: Consumer.cpp  Consumer.hpp  IConsumerService.hpp
server/src/mathutils/: converters.cpp  converters.hpp
server/src/network/: StreamingService.cpp  StreamingService.hpp  server_errors.hpp
server/src/network/socketserver/: ISocketServer.hpp  TCPSocketServer.cpp  TCPSocketServer.hpp
server/src/producer/: Producer.cpp  Producer.hpp
server/src/recorder/: ErrorHandling.hpp  WASAPIAudioRecorder.cpp  WASAPIAudioRecorder.hpp  utils.cpp  utils.hpp
server/src/recorder/creators/builder/: WASAPIAudioRecorderBuilder.cpp  WASAPIAudioRecorderBuilder.hpp
server/src/recorder/creators/directors/exclusivemode/: WASAPIAudioExclusiveModeRecorderDirector.cpp  WASAPIAudioExclusiveModeRecorderDirector.hpp
server/src/recorder/creators/directors/sharedmode/: WASAPIAudioSharedModeRecorderDirector.cpp  WASAPIAudioSharedModeRecorderDirector.hpp
server/src/recorder/exceptions/: BaseRecorderException.hpp  ChunkRecordingFailure.hpp  EventCreationFailureException.hpp  RecorderCreationFailed.hpp  StartRecordingFailure.hpp
server/src/wavefile/: WaveConstants.hpp  WaveCreator.cpp  WaveCreator.hpp
sound_files/: WaveFile.cpp  WaveFile.h  wave_file.cpp  wave_file.h
(+11 files in other folders)
